[gd_scene load_steps=5 format=3 uid="uid://fcw4037ylefa"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_o8mdu"]
[ext_resource type="PackedScene" uid="uid://ci0lr4vn5lccr" path="res://tscn/options_menu.tscn" id="2_5h6he"]
[ext_resource type="Texture2D" uid="uid://oj5s0xes1ums" path="res://assets/visual/misc/text_background_ninepatch.png" id="3_cnng2"]

[sub_resource type="SystemFont" id="SystemFont_6e8ny"]
font_names = PackedStringArray("Alagard")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o8mdu")

[node name="Options Menu" parent="." instance=ExtResource("2_5h6he")]
visible = false
layout_mode = 1

[node name="Main Menu Selections" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0001
offset_top = -50.5
offset_right = -1.00006
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.70908, 1.70908)
texture = ExtResource("3_cnng2")
patch_margin_left = 7
patch_margin_top = 9
patch_margin_right = 8
patch_margin_bottom = 7

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu Selections"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0532
offset_top = -32.6542
offset_right = 40.9468
offset_bottom = 68.3458
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.675458, 0.675458)
theme_override_constants/separation = 11

[node name="StartButton" type="Button" parent="Main Menu Selections/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionButton" type="Button" parent="Main Menu Selections/VBoxContainer"]
layout_mode = 2
text = "Option"

[node name="QuitButton" type="Button" parent="Main Menu Selections/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -142.5
offset_top = 136.0
offset_right = 142.5
offset_bottom = 187.0
grow_horizontal = 2
theme_override_fonts/font = SubResource("SystemFont_6e8ny")
theme_override_font_sizes/font_size = 50
text = "Out Of Mana"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Main Menu Selections/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Main Menu Selections/VBoxContainer/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="Main Menu Selections/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
